syntax = "proto3";

package com.demo.grpc;
option java_package = "com.demo.grpc";
option java_outer_classname = "Demo";
option objc_class_prefix = "HLW";
option java_multiple_files = true;


service DemoService {
  rpc send (DemoRequest) returns (DemoReply) {}
}

message DemoRequest {
  string name = 1;
}

message DemoReply {
  string message = 1;
}